2004-04-17  Todd Berman  <tberman@sevenl.net>

	* Gui/Components/SdMenu.cs:
	* Commands/MenuItemBuilders.cs:
	Fix the menu system so we dont rebuild the menu's from scratch every
	time you use them. This should speed using the menu's up a lot.
	The only trick is new SubmenuItemBuilders need to create menu types
	with the ISubmenuItem interface so we can tell that they are built
	and not static.

2004-04-16  John Luke  <jluke@cfl.rr.com>

	* Gui/Dialogs/SharpDevelopAboutPanels.cs: align the labels to
	the left and space them a little better

2004-04-14  John Luke  <jluke@cfl.rr.com>

	* Gui/Dialogs/CommonAboutDialog.cs: chain to base (GType)
	so Gtk# cvs is happy

2004-04-14  Nick Drochak  <ndrochak@gol.com>

	* Gui/Pads/ProjectBrowser/ProjectBrowserView.cs: When file is added, put it
	under the correct folder.

2004-04-14  Pawel Rozanski  <tokugawa@afn.no-ip.org>

	* Commands/RunCommands.cs:
	* Internal/Project/Combine/Combine.cs:
	fix bug #56864.

2004-04-13  John Luke  <jluke@cfl.rr.com>

	* Gui/BrowserDisplayBinding/HtmlViewPane.cs: use Navbar control,
	use StatusBarService for messages and a Progress monitor

2004-04-11  Todd Berman  <tberman@sevenl.net>

	* Gui/Workbench/WorkbenchMemento.cs: ugh, check for valid data too.

2004-04-11  Todd Berman  <tberman@sevenl.net>

	* Gui/Workbench/WorkbenchMemento.cs: fix potential nullrefs.

2004-04-11  Todd Berman  <tberman@sevenl.net>

	* Commands/AutostartCommands.cs: reorganize the SetMemento so it works
	better.
	* Gui/Workbench/WorkbenchMemento.cs: readd windowstate.
	* Gui/Workbench/DefaultWorkbench.cs: now we restore from maximized
	properly.

2004-04-10  Todd Berman  <tberman@sevenl.net>

	* Internal/Project/Project/AbstractProject.cs: fix potentiall nullref

2004-04-10  Todd Berman  <tberman@sevenl.net>

	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs:
	* Gui/Workbench/Layouts/SdiWorkspaceWindow.cs:
	* Gui/IWorkbenchLayout.cs:
	fix bug #56769.

2004-04-09  John Luke  <jluke@cfl.rr.com>
